@@ -1,3 +1,8 @@
+2017-08-03  Jeremy Drake <jeremydrake+gnuk@eacceleration.com>
+
+	* regnual/regnual.c (main): Allow compile time
+	flash size definition by STM32F103_OVERRIDE_FLASH_SIZE_KB.
+
 2017-08-02  Jeremy Drake  <jeremydrake+gnuk@eacceleration.com>
 
 	* src/flash.c (flash_terminate): Erase Certificate DO, too.
